--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -4,3 +4,5 @@ Duplicate.userForm.username=Someone already has that username.
 Duplicate.userForm.email=Someone already has that email.
 Size.userForm.password=Try one with at least 8 characters.
 Diff.userForm.passwordConfirm=These passwords don't match.
+User.notFound=User not found
+Group.exists=Group with this name already exists
