--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -6,3 +6,5 @@ Size.userForm.password=Try one with at least 8 characters.
 Diff.userForm.passwordConfirm=These passwords don't match.
 User.notFound=User not found
 Group.exists=Group with this name already exists
+Group.notExists=Group with this name doesn't exist
+Device.exists=Device with this name already exists for this group
