--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -14,3 +14,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.HSQLDialect
 spring.messages.basename=validation
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.jsp
+
+# ===============================
+# = Arepa Properties
+# ===============================
+org.piphonom.arepa.rootca.location=keystore/RootCA.pfx
+org.piphonom.arepa.rootca.alias=arepaTestCA
+org.piphonom.arepa.rootca.storepass=otus
+org.piphonom.arepa.rootca.keypass =
