--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -8,3 +8,5 @@ User.notFound=User not found
 Group.exists=Group with this name already exists
 Group.notExists=Group with this name doesn't exist
 Device.exists=Device with this name already exists for this group
+Device.notExists=Device with this public ID not found
+CSR.sign.failure="Failure of certificate signing"
