--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -10,3 +10,4 @@ Group.notExists=Group with this name doesn't exist
 Device.exists=Device with this name already exists for this group
 Device.notExists=Device with this public ID not found
 CSR.sign.failure="Failure of certificate signing"
+Internal.error="Internal server error"
