Add point CSR signing. Fixed entites. Other fixes. New tests

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -11,3 +11,4 @@ Device.exists=Device with this name already exists for this group
 Device.notExists=Device with this public ID not found
 CSR.sign.failure="Failure of certificate signing"
 Internal.error="Internal server error"
+Group.CA.instantiation.failure="Failed to instantiate group CA"
