--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ org.piphonom.arepa.rootca.location=src/test/resources/keystore/RootCA.pfx
 org.piphonom.arepa.rootca.alias=otus
 org.piphonom.arepa.rootca.storepass=otus
 org.piphonom.arepa.rootca.keypass=otus
+org.piphonom.arepa.group.ca.daysValidity=365
+org.piphonom.arepa.group.ca.keySize=2048
